# yafowil

./: .coveragerc  .coveralls.yml  .gitignore  .travis.yml  CHANGES.rst  HISTORY.rst  LICENSE.rst  MANIFEST.in  Makefile  README.rst  README.txt  base.cfg  bootstrap.sh  buildbot.cfg  buildout.cfg  dev.cfg  i18n-init.sh  i18n.rst  i18n.sh  i18n_extract.sh  mx.ini  pyproject.toml  run_coverage.sh  run_tests.sh  setup.cfg  setup.py  travis.cfg
.github/workflows/: test.yaml  test.yml
docs/: Makefile  make.bat
docs-source/: architecture.txt  conf.py  examples.txt  extend.txt  helloworld.txt  index.txt  introduction.txt
docs/archive/: base.rst  common.rst  controller.rst  table.rst
docs/doctrees/: api.doctree  architecture.doctree  environment.pickle  examples.doctree  extend.doctree  helloworld.doctree  hellworld.doctree  index.doctree  introduction.doctree
docs/doctrees/widgets/: widgets.doctree
docs/html/: .buildinfo  api.html  architecture.html  examples.html  extend.html  genindex.html  helloworld.html  hellworld.html  index.html  introduction.html  objects.inv  search.html  searchindex.js
docs/html/_sources/: api.txt  architecture.txt  helloworld.txt  hellworld.txt
docs/html/_sources/widgets/: widgets.txt
docs/html/_static/: default.css
docs/html/widgets/: widgets.html
etc/: base.cfg
scripts/: clean.sh  coverage.sh  i18n.sh  install.sh  tests.sh
src/yafowil/: __init__.py  array.py  array.txt  base.py  base.rst  base.txt  button.py  checkbox.py  combined.py  combined.txt  common.py  common.rst  common.txt  compat.py  compound.py  compound.rst  compound.txt  controller.py  controller.rst  controller.txt  datatypes.py  email.py  example.py  field.py  file.py  hidden.py  labeled.py  labeled.txt  lines.py  loader.py  mode.py  mode.txt  number.py  password.py  persistence.py  persistence.rst  plans.py  plans.rst  proxy.py  resources.py  (+20 more)
src/yafowil/i18n/locales/: yafowil.pot
src/yafowil/i18n/locales/de/LC_MESSAGES/: yafowil.mo  yafowil.po
src/yafowil/i18n/locales/en/LC_MESSAGES/: yafowil.mo  yafowil.po
src/yafowil/locales/: yafowil.pot
src/yafowil/locales/de/LC_MESSAGES/: yafowil.po
src/yafowil/locales/en/LC_MESSAGES/: yafowil.po
src/yafowil/resources/: README.txt
src/yafowil/tests/: __init__.py  test_base.py  test_button.py  test_checkbox.py  test_common.py  test_compound.py  test_controller.py  test_datatypes.py  test_email.py  test_field.py  test_file.py  test_hidden.py  test_lines.py  test_number.py  test_password.py  test_persistence.py  test_proxy.py  test_resources.py  test_search.py  test_select.py  test_serializer.py  test_structure.py  test_table.py  test_tag.py  test_text.py  test_textarea.py  test_tsf.py  test_url.py  test_utils.py
