[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yafowil"
version = "4.0.0.dev0"
description = "YAFOWIL - declarative, framework independent, flexible HTML forms"
readme = "README.rst"
license = {text = "Simplified BSD"}
authors = [{name = "Yafowil Contributors", email = "dev@conestack.org"}]
keywords = ["html", "form", "rendering", "processing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "node>=1.2",
    "webresource",
]

[project.optional-dependencies]
test = [
    "coverage",
    "lxml",
    "pytest",
]

[project.entry-points."yafowil.plugin"]
register = "yafowil.loader:register"
example = "yafowil.example:get_example"

[tool.hatch.build.targets.wheel]
packages = ["src/yafowil"]

[tool.pytest.ini_options]
consider_namespace_packages = true
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.zest-releaser]
create-wheel = true
